KuberntesObjectsYamls/VirtualService-Updated.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
  	- reviews
  gateways:
  	- bookinfo-gateway 
  http:
  - match:
    - port: 15029
    - uri:
       exact: /productpage
    - uri:
        prefix: /product
    - headers:
        end-user:
          exact: tester
        cookie:
          regex: "^(.*?;)?(product-page=v2)(;.*)?$"   
    route:
    - destination:
        host: reviews
        subset: v2
        port:
          number: 9080
    fault:
      delay:
        percent: 100
        fixedDelay: 2.5s
      abort:
         percent: 50
         httpStatus: 503
  - route:
    - destination:
        host: reviews
        subset: v1
        port:
          number: 9080
      weight: 100
    - destination:
        host: reviews
        subset: v1
        port:
          number: 9080
      weight: 100
    timeout: 23s
    retries:
      attempts: 3
      perTryTimeout: 30s
      retryOn: 5xx
