KuberntesObjectsYamls/VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo
spec:
  hosts:
  - "*"
  gateways:
  - bookinfo-gateway
  http:
  - match:
    - uri:
        exact: /productpage
    - uri:
        prefix: /static
    - uri:
        exact: /login
    - uri:
        exact: /logout
    - uri:
        prefix: /api/v1/products
  - route:
    - destination:
        host: productpage
        port:
          number: 9080
    timeout: 23s
    retries:
      attempts: 3
      perTryTimeout: 30s
      retryOn: 5xx
